clusters/homelab/media/jellyseerr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
  - port: 80
    targetPort: 5055
