clusters/homelab/media/jellyseerr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app: jellyseerr 
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - request.${SECRET_DOMAIN}
      secretName: jellyseerr-tls
  rules:
    - host: request.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jellyseerr
                port:
                  number: 80
